second push with css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -20,7 +24,9 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <div class="head">Welcome to the first version of Niresh Maharjan.</div>
+    <div class="head">
+      <h1>Something Great Comming Soon. STAY TUNED</h1>
+    </div>
     <script src="" async defer></script>
   </body>
 </html>
