--- a/index.html
+++ b/index.html
@@ -1,412 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Niresh Maharjan</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Niresh Maharjan</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <meta name="theme-color" content="#032b38" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
+      href="https://fonts.googleapis.com/css?family=Oswald&display=swap"
       rel="stylesheet"
     />
-
     <link
+      href="https://fonts.googleapis.com/css?family=Raleway:200,100,400"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"
     />
-
-    <link rel="stylesheet" href="css/animate.css" />
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="css/magnific-popup.css" />
-
-    <link rel="stylesheet" href="css/flaticon.css" />
-    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-    <nav
-      class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target"
-      id="ftco-navbar"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Hello<span>.</span></a>
-        <button
-          class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle"
-          type="button"
-          data-toggle="collapse"
-          data-target="#ftco-nav"
-          aria-controls="ftco-nav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="oi oi-menu"></span> Menu
-        </button>
 
-        <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav nav ml-auto">
-            <li class="nav-item">
-              <a href="#home-section" class="nav-link"><span>Home</span></a>
+  <body>
+    <div class="main">
+      <section class="side" id="left">
+        <section id="work-links" class="center-links">
+          <div class="links-title">Projects</div>
+          <ul class="links">
+            <li class="links-item">
+              <a href="https://github.com/nirace16/plugin-develop"
+                >WP-Form Plugin</a
+              >
             </li>
-            <li class="nav-item">
-              <a href="#about-section" class="nav-link"><span>About</span></a>
-            </li>
-            <li class="nav-item">
-              <a href="#skills-section" class="nav-link"><span>Skills</span></a>
+            <li class="links-item">
+              <a href="https://github.com/rojan96/nirace16/laravel-instaclone"
+                >Insta Clone</a
+              >
             </li>
           </ul>
-        </div>
-      </div>
-    </nav>
-    <section id="home-section" class="hero">
-      <div class="home-slider owl-carousel">
-        <div class="slider-item">
-          <div class="overlay"></div>
-          <div class="container-fluid px-md-0">
-            <div
-              class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
-              data-scrollax-parent="true"
+        </section>
+      </section>
+      <section class="side" id="right">
+        <main>
+          <h1>Niresh Maharjan</h1>
+          <h2>
+            <span
+              class="txt-rotate"
+              data-period="2000"
+              data-rotate='[ "Software Engineer", "Web Developer", "Full-Stack Developer"]'
             >
-              <div class="one-third order-md-last img">
-                <div class="overlay"></div>
-                <div class="overlay-1"></div>
-              </div>
-              <div
-                class="one-forth d-flex align-items-center ftco-animate"
-                data-scrollax=" properties: { translateY: '70%' }"
-              >
-                <div class="text">
-                  <span class="subheading">Hello! This is Niresh</span>
-                  <h1 class="mb-4 mt-3">
-                    Designer &amp; Developer
-                  </h1>
-                  <p>
-                    <a href="#" class="btn btn-primary">Hire me</a>
-                    <a href="#" class="btn btn-primary btn-outline-primary"
-                      >Download CV</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section
-      class="ftco-about ftco-section ftco-no-pt ftco-no-pb"
-      id="about-section"
-    >
-      <div class="container">
-        <div class="row d-flex no-gutters">
-          <div class="col-md-6 col-lg-5 d-flex">
-            <div class="img-about img d-flex align-items-stretch">
-              <div class="overlay"></div>
-              <div
-                class="img d-flex align-self-stretch align-items-center"
-              ></div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-7 pl-md-4 pl-lg-5 py-5">
-            <div class="py-md-5">
-              <div class="row justify-content-start pb-3">
-                <div class="col-md-12 heading-section ftco-animate">
-                  <span class="subheading">My Intro</span>
-                  <h2
-                    class="mb-4"
-                    style="font-size: 34px; text-transform: capitalize;"
-                  >
-                    About Me
-                  </h2>
-                  <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia. It is a paradisematic
-                    country, in which roasted parts of sentences fly into your
-                    mouth.
-                  </p>
-
-                  <ul class="about-info mt-4 px-md-0 px-2">
-                    <li class="d-flex">
-                      <span>Name:</span> <span>Niresh Maharjan</span>
-                    </li>
-                    <li class="d-flex">
-                      <span>Date of birth:</span> <span>April 30, 1996</span>
-                    </li>
-                    <li class="d-flex">
-                      <span>Address:</span>
-                      <span>Kathmandu, Nepal</span>
-                    </li>
-                    <li class="d-flex">
-                      <span>Zip code:</span> <span>44700</span>
-                    </li>
-                    <li class="d-flex">
-                      <span>Email:</span> <span>niresh963@gmail.com</span>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-12">
-                  <div class="my-interest d-lg-flex w-100">
-                    <div class="interest-wrap d-flex align-items-center">
-                      <div
-                        class="icon d-flex align-items-center justify-content-center"
-                      >
-                        <span class="flaticon-listening"></span>
-                      </div>
-                      <div class="text">Music</div>
-                    </div>
-                    <div class="interest-wrap d-flex align-items-center">
-                      <div
-                        class="icon d-flex align-items-center justify-content-center"
-                      >
-                        <span class="flaticon-suitcases"></span>
-                      </div>
-                      <div class="text">Travel</div>
-                    </div>
-                    <div class="interest-wrap d-flex align-items-center">
-                      <div
-                        class="icon d-flex align-items-center justify-content-center"
-                      >
-                        <span class="flaticon-video-player"></span>
-                      </div>
-                      <div class="text">Movie</div>
-                    </div>
-                    <div class="interest-wrap d-flex align-items-center">
-                      <div
-                        class="icon d-flex align-items-center justify-content-center"
-                      >
-                        <span class="flaticon-football"></span>
-                      </div>
-                      <div class="text">Sports</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section bg-light" id="skills-section">
-      <div class="container">
-        <div class="row justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-            <span class="subheading">Skills</span>
-            <h2 class="mb-4">My Skills</h2>
-            <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia
-            </p>
-          </div>
-        </div>
-        <div class="row progress-circle mb-5">
-          <div class="col-lg-4 mb-4">
-            <div class="bg-white rounded-lg shadow p-4">
-              <h2 class="h5 font-weight-bold text-center mb-4">PHP</h2>
-
-              <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="95">
-                <span class="progress-left">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <span class="progress-right">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <div
-                  class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center"
-                >
-                  <div class="h2 font-weight-bold">
-                    95<sup class="small">%</sup>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4">
-            <div class="bg-white rounded-lg shadow p-4">
-              <h2 class="h5 font-weight-bold text-center mb-4">Javascript</h2>
-
-              <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="98">
-                <span class="progress-left">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <span class="progress-right">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <div
-                  class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center"
-                >
-                  <div class="h2 font-weight-bold">
-                    98<sup class="small">%</sup>
-                  </div>
-                </div>
-              </div>
-              <!-- END -->
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4">
-            <div class="bg-white rounded-lg shadow p-4">
-              <h2 class="h5 font-weight-bold text-center mb-4">React</h2>
-
-              <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="68">
-                <span class="progress-left">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <span class="progress-right">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <div
-                  class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center"
-                >
-                  <div class="h2 font-weight-bold">
-                    68<sup class="small">%</sup>
-                  </div>
-                </div>
-              </div>
-              <!-- END -->
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4">
-            <div class="bg-white rounded-lg shadow p-4">
-              <h2 class="h5 font-weight-bold text-center mb-4">Laravel</h2>
-
-              <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="92">
-                <span class="progress-left">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <span class="progress-right">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <div
-                  class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center"
-                >
-                  <div class="h2 font-weight-bold">
-                    92<sup class="small">%</sup>
-                  </div>
-                </div>
-              </div>
-              <!-- END -->
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4">
-            <div class="bg-white rounded-lg shadow p-4">
-              <h2 class="h5 font-weight-bold text-center mb-4">WordPress</h2>
-
-              <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="83">
-                <span class="progress-left">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <span class="progress-right">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <div
-                  class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center"
-                >
-                  <div class="h2 font-weight-bold">
-                    83<sup class="small">%</sup>
-                  </div>
-                </div>
-              </div>
-              <!-- END -->
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4">
-            <div class="bg-white rounded-lg shadow p-4">
-              <h2 class="h5 font-weight-bold text-center mb-4">SEO</h2>
-
-              <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="95">
-                <span class="progress-left">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <span class="progress-right">
-                  <span class="progress-bar border-primary"></span>
-                </span>
-                <div
-                  class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center"
-                >
-                  <div class="h2 font-weight-bold">
-                    95<sup class="small">%</sup>
-                  </div>
-                </div>
-              </div>
-              <!-- END -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              All rights reserved
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen">
-      <svg class="circular" width="48px" height="48px">
-        <circle
-          class="path-bg"
-          cx="24"
-          cy="24"
-          r="22"
-          fill="none"
-          stroke-width="4"
-          stroke="#eeeeee"
-        />
-        <circle
-          class="path"
-          cx="24"
-          cy="24"
-          r="22"
-          fill="none"
-          stroke-width="4"
-          stroke-miterlimit="10"
-          stroke="#F96D00"
-        />
-      </svg>
+              <script src="js/script.js"></script>
+            </span>
+          </h2>
+        </main>
+        <section id="online-links" class="center-links">
+          <div class="links-title">Online</div>
+          <ul class="links">
+            <li class="links-item">
+              <a href="https://github.com/nirace16">GitHub</a>
+            </li>
+            <li class="links-item">
+              <a href="https://linkedin.com/in/niresh-maharjan/">Linkedin</a>
+            </li>
+            <li class="links-item"><a href="./resume/">Resume</a></li>
+          </ul>
+        </section>
+        <footer>
+          <a href="mailto:niresh963@gmail.com?subject=I want to Hire you!"
+            >Email me</a
+          >
+        </footer>
+      </section>
     </div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-
-    <script src="js/main.js"></script>
   </body>
 </html>
