resume removed for corrections

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               >
             </li>
             <li class="links-item">
-              <a href="https://github.com/rojan96/nirace16/laravel-instaclone"
+              <a href="https://github.com/nirace16/laravel-instaclone"
                 >Insta Clone</a
               >
             </li>
@@ -59,7 +59,7 @@
             <li class="links-item">
               <a href="https://linkedin.com/in/niresh-maharjan/">Linkedin</a>
             </li>
-            <li class="links-item"><a href="./resume/">Resume</a></li>
+            <li class="links-item"><a href="#">Resume</a></li>
           </ul>
         </section>
         <footer>
