--- a/index.html
+++ b/index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Niresh Maharjan</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <meta name="theme-color" content="#032b38" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Oswald&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:200,100,400"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Niresh Maharjan</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+		<meta name="theme-color" content="#032b38" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Oswald&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Raleway:200,100,400"
+			rel="stylesheet"
+			type="text/css"
+		/>
+	</head>
 
-  <body>
-    <div class="main">
-      <section class="side" id="left">
-        <section id="work-links" class="center-links">
-          <div class="links-title">Projects</div>
-          <ul class="links">
-            <li class="links-item">
-              <a href="https://github.com/nirace16/plugin-develop"
-                >WP-Form Plugin</a
-              >
-            </li>
-            <li class="links-item">
-              <a href="https://github.com/nirace16/laravel-instaclone"
-                >Insta Clone</a
-              >
-            </li>
-          </ul>
-        </section>
-      </section>
-      <section class="side" id="right">
-        <main>
-          <h1>Niresh Maharjan</h1>
-          <h2>
-            <span
-              class="txt-rotate"
-              data-period="2000"
-              data-rotate='[ "Software Engineer", "Web Developer", "Full-Stack Developer"]'
-            >
-              <script src="js/script.js"></script>
-            </span>
-          </h2>
-        </main>
-        <section id="online-links" class="center-links">
-          <div class="links-title">Online</div>
-          <ul class="links">
-            <li class="links-item">
-              <a href="https://github.com/nirace16">GitHub</a>
-            </li>
-            <li class="links-item">
-              <a href="https://linkedin.com/in/niresh-maharjan/">Linkedin</a>
-            </li>
-            <li class="links-item"><a href="#">Resume</a></li>
-          </ul>
-        </section>
-        <footer>
-          <a href="mailto:niresh963@gmail.com?subject=I want to Hire you!"
-            >Email me</a
-          >
-        </footer>
-      </section>
-    </div>
-  </body>
+	<body>
+		<div class="main">
+			<section class="side" id="left">
+				<section id="work-links" class="center-links">
+					<div class="links-title">Projects</div>
+					<ul class="links">
+						<li class="links-item">
+							<a href="https://github.com/nirace16/plugin-develop"
+								>WP-Form Plugin</a
+							>
+						</li>
+						<li class="links-item">
+							<a href="https://github.com/nirace16/laravel-instaclone"
+								>Insta Clone</a
+							>
+						</li>
+						<li class="links-item">
+							<a href="/paino/index.html">Html Paino</a>
+						</li>
+					</ul>
+				</section>
+			</section>
+			<section class="side" id="right">
+				<main>
+					<h1>Niresh Maharjan</h1>
+					<h2>
+						<span
+							class="txt-rotate"
+							data-period="2000"
+							data-rotate='[ "Software Engineer", "Web Developer", "Full-Stack Developer"]'
+						>
+							<script src="js/script.js"></script>
+						</span>
+					</h2>
+				</main>
+				<section id="online-links" class="center-links">
+					<div class="links-title">Online</div>
+					<ul class="links">
+						<li class="links-item">
+							<a href="https://github.com/nirace16">GitHub</a>
+						</li>
+						<li class="links-item">
+							<a href="https://linkedin.com/in/niresh-maharjan/">Linkedin</a>
+						</li>
+						<li class="links-item"><a href="#">Resume</a></li>
+					</ul>
+				</section>
+				<footer>
+					<a href="mailto:niresh963@gmail.com?subject=I want to Hire you!"
+						>Email me</a
+					>
+				</footer>
+			</section>
+		</div>
+	</body>
 </html>
