minor change to links

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 					<ul class="links">
 						<li class="links-item">
 							<a href="https://github.com/nirace16/plugin-develop"
-								>WP-Form Plugin</a
+								>WP-Form Plugin (WordPress)</a
 							>
 						</li>
 						<li class="links-item">
 							<a href="https://github.com/nirace16/laravel-instaclone"
-								>Insta Clone</a
+								>Insta Clone (Laravel)</a
 							>
 						</li>
 						<li class="links-item">
-							<a href="/paino/index.html">Html Paino</a>
+							<a href="/paino/index.html">Html Paino (JS)</a>
 						</li>
 					</ul>
 				</section>
@@ -47,7 +47,7 @@
 						<span
 							class="txt-rotate"
 							data-period="2000"
-							data-rotate='[ "Software Engineer", "Web Developer", "Full-Stack Developer"]'
+							data-rotate='[ "Software Engineer", "Web Developer", "PowerApps Developer"]'
 						>
 							<script src="js/script.js"></script>
 						</span>
